--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,5 @@
 # These are supported funding model platforms
 
 github: [Nukecraft5419]
+ko_fi: Nukecraft5419
 custom: ['https://www.paypal.com/paypalme/Nukecraft5419']
